# uAdBlock

./: .gitignore  CMakeLists.txt  README.md  manifest.json.in  uAdBlock.apparmor
app/: CMakeLists.txt  Main.qml  uAdBlock.desktop.in
app/tests/autopilot/: run
app/tests/autopilot/uAdBlock/tests/: __init__.py  test_main.py
backend/: CMakeLists.txt
backend/modules/UAdBlock/: backend.cpp  backend.h  cmd.cpp  cmd.h  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
host-files/: hosts  hosts-fakenews  hosts-gambling  hosts-porn  hosts-social  hosts.02-uAdBlock-extra  hosts.10-someonewhocares  update-host-file.sh  updated  updated-gambling  updated-porn
po/: ca.po  de.po  es.po  fr.po  pl.po  uadblock.mariogrip.pot
